--- a/client-explorare/index.html
+++ b/client-explorare/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="dist/build.css">
   </head>
   <body>
+    <div><h1>Update check 2</h1></div>
     <div id="app"></div>
     <script src="dist/build.js"></script>
   </body>
