--- a/client-explorare/index.html
+++ b/client-explorare/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title>client-explorare</title>
-    <link rel="stylesheet" href="dist/build.css">
+    <title>Angular QuickStart</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <base href="/"></base>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="iseq-css/iseq-theme.css">
+
+    <!-- Polyfill(s) for older browsers -->
+    <script src="node_modules/core-js/client/shim.min.js"></script>
+
+    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/reflect-metadata/Reflect.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
+
+    <script src="systemjs.config.js"></script>
+    <script>
+    
+      System.import('app').catch(function(err){ console.error(err); });
+    </script>
+
+    <!-- sticky header -->
+    <style>
+      .affix {top: 0; width: 100%;}
+      .affix + .container-fluid {padding-top: 70px;}
+      a:not([href]):not([tabindex]) {color: white !important; text-decoration: none;}
+    </style>
+
   </head>
-  <body>
-    <div><h1>Update check 2</h1></div>
-    <div id="app"></div>
-    <script src="dist/build.js"></script>
+
+  <body class="palette-plain">
+    <my-app>Loading ...</my-app>
   </body>
 </html>
