--- a/client-dx/index.html
+++ b/client-dx/index.html
@@ -8,19 +8,23 @@
   <meta name="description" content="genetraps web page">
   <meta name="author" content="Intelliseq">
   <link href="https://code.jquery.com/qunit/qunit-2.6.2.css" rel="stylesheet">
-
+  <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
 </head>
 
 <body>
   <div id="genetraps-app">
-    <p>{{ message }}</p>
+    <router-view></router-view>
   </div>
+
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://npmcdn.com/vue-router/dist/vue-router.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.js"></script>
-  <script src="https://code.jquery.com/qunit/qunit-2.6.2.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <!--<script src="https://code.jquery.com/qunit/qunit-2.6.2.js"></script>-->
   <script src="vue/genetraps-app-vue.js"></script>
-  <script src="qunit/qunit-tests.js"></script>
+  <!--<script src="qunit/qunit-tests.js"></script>
   <div id="qunit"></div>
-  <div id="qunit-fixture"></div>
+  <div id="qunit-fixture"></div>-->
 </body>
 </html>
