--- a/client-dx/index.html
+++ b/client-dx/index.html
@@ -8,44 +8,10 @@
   <meta name="description" content="genetraps web page">
   <meta name="author" content="Intelliseq">
 
-  <!-- Google Analytics -->
-  <script type="text/javascript">
-
-   var loadGoogleAnalytics = function(){
-     console.log("LOG: loadGoogleAnalytics()");
-
-     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-     ga('create', 'UA-125435882-1', 'auto');
-     ga('send', 'pageview');
-
-       ga('set', 'page', router.currentRoute.path);
-       ga('send', 'pageview');
-
-       router.afterEach(( to, from ) => {
-         ga('set', 'page', to.path);
-         ga('send', 'pageview');
-         console.log("Vue.App.router.afterEach() " + to.path);
-       });
-
-    }
-</script>
-  <!--<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-125435882-1', 'auto');
-  ga('send', 'pageview');
-</script>-->
-  <!-- End Google Analytics -->
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
   <!--<link href="https://code.jquery.com/qunit/qunit-2.6.2.css" rel="stylesheet">-->
-  <!--<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">-->
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons" rel="stylesheet" type="text/css">
   <link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
   <link href="styles/animate.css" rel="stylesheet">
@@ -53,8 +19,10 @@
 
 </head>
 
-<body>
+<body style="font-family: 'Roboto', sans-serif;">
   <div id="genetraps-app">
+    <wait></wait>
+    <toolbar></toolbar>
     <!--<transition enter-active-class="animated flipInX" leave-active-class="animated flipInY">-->
     <router-view></router-view>
   <!--</transition>-->
@@ -65,10 +33,23 @@
   <script src="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue-cookies/vue-cookies.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vuex/3.0.1/vuex.min.js"></script>
   <!--<script src="https://code.jquery.com/qunit/qunit-2.6.2.js"></script>-->
-  <script src="vue/cookies-component.vue.js"></script>
-  <script src="vue/login-component.vue.js"></script>
-  <script src="vue/welcome-component.vue.js"></script>
+
+  <script src="vue/logger.js"></script>
+  <script src="vue/google-analytics.js"></script>
+
+  <script src="vue/vuex-module-security.vue.js"></script>
+  <script src="vue/vuex-module-user.vue.js"></script>
+  <script src="vue/vuex-store.vue.js"></script>
+
+  <script src="vue/component-cookies.vue.js"></script>
+  <script src="vue/component-login.vue.js"></script>
+  <script src="vue/component-wait.vue.js"></script>
+  <script src="vue/component-toolbar.vue.js"></script>
+  <script src="vue/component-welcome.vue.js"></script>
+
   <script src="vue/app-genetraps.vue.js"></script>
   <!--<script src="qunit/qunit-tests.js"></script>
   <div id="qunit"></div>
