Refactor axios to separate function

--- a/client-dx/index.html
+++ b/client-dx/index.html
@@ -39,9 +39,11 @@
 
   <script src="vue/logger.js"></script>
   <script src="vue/google-analytics.js"></script>
-
+  <script src="vue/axios.js"></script>
+  
   <script src="vue/vuex-module-security.vue.js"></script>
   <script src="vue/vuex-module-user.vue.js"></script>
+  <script src="vue/vuex-module-sample.vue.js"></script>
   <script src="vue/vuex-store.vue.js"></script>
 
   <script src="vue/component-cookies.vue.js"></script>
