--- a/client-dx/index.html
+++ b/client-dx/index.html
@@ -13,7 +13,7 @@
 
   <!--<link href="https://code.jquery.com/qunit/qunit-2.6.2.css" rel="stylesheet">-->
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons" rel="stylesheet" type="text/css">
-  <link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/vuetify@1.5.16/dist/vuetify.min.css" rel="stylesheet">
   <link href="styles/animate.css" rel="stylesheet">
 
   <style>
@@ -50,7 +50,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue-router/dist/vue-router.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vuetify@1.5.16/dist/vuetify.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue-cookies/vue-cookies.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.js"></script>
