--- a/client-dx/index.html
+++ b/client-dx/index.html
@@ -54,7 +54,7 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue-cookies/vue-cookies.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vuex/3.0.1/vuex.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vuex/3.0.1/vuex.js"></script>
   <!--<script src="https://code.jquery.com/qunit/qunit-2.6.2.js"></script>-->
 
   <script src="vue/logger.js"></script>
